Added changes to apply any amount of filters in single endpoint. Improvement to work with local data, added damage calculator tool